# languatage

./: Cargo.toml  Makefile.toml  README.md
.github/workflows/: CI.yaml  clippy.yaml  release.yaml  rust-clippy.yaml  test.yaml
src/: config.rs  config.yaml  lib.rs  main.rs  stat.rs
