[package]
name = "languatage"
description = "A tool for calculate the percentage of languages used in a directory"
authors = ["JichouP"]
version = "0.6.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/JichouP/languatage"

[lib]
name = "languatage"

[[bin]]
name = "languatage"
required-features = ["build-binary"]

[badges]
maintenance = { status = "actively-developed" }

[features]
build-binary = ["clap", "num-format", "prettytable-rs"]

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.20", optional = true, features = ["derive"] }
num-format = { version = "0.4.0", optional = true }
prettytable-rs = { version = "0.9.0", optional = true }
serde = { version = "1.0.144", features = ["derive"] }
serde_yaml = "0.9.11"
